  - Fixed defect #1261 Director field blank with italian imdb and two directors in a movie
  - Fixed defect #1263 Indexing of Cast, Director, etc is not performed when the movie is in a set (again)  
  - Fixed defect #1265 Allocine adds html tags to the year of films
  - Fixed defect #1270 Movies don't get proper rating from IMDB  
  
MovieJukebox 1.7
----------------
  - Enhancement   #358 Intuitive movie highlight when surfing up/down pages in the movies index (default skin)
  - Enhancement   #503 Simplify skins by figuring out the vod/vcd/playlist attributes in YAMJ itself
  - Enhancement   #743 Fanart for Set index pages
  - Fixed defect  #783 mjb.categories.displayList and Sets
  - Enhancement   #811 Property to disable multipart playlists
  - Enhancement   #983 Add file date to the basename.xml files
  - Fixed defect #1028 nbTvThumbnailsPerPage doesn't carry over to TV sets when using singleSeriesPage=true
  - Fixed defect #1050 YAMJ doesn't include myiHome server IP in *.playlist.jsp
  - Fixed defect #1067 No more fanart displayed with Allocine plugin
  - Fixed defect #1086 BluRay Disk folders with multiple .m2ts files making up the main movie are handled as if they're multiple parts
  - Fixed defect #1090 YAMJ not indexing a BluRay TV Series properly
  - Fixed defect #1094 IMDb Rating not detected
  - Enhancement  #1102 Sort the moviedb.org poster images by age (oldest first)
  - Fixed defect #1105 Black bar at the top of images if aspect ratio is wrong
  - Fixed defect #1106 Fanart doesn't exist/download
  - Fixed defect #1107 Error Message when Scraping TV Series in TheTVDB API
  - Enhancement  #1108 Release date parsing for IMDB broken
  - Fixed defect #1117 Local videoimages copy error
  - Enhancement  #1119 Include movie counter in cmd window
  - Enhancement  #1120 Support for <aspect></aspect> NFO Tags
  - Enhancement  #1121 File size scanning/support for skin details
  - Enhancement  #1122 YAMJ Version Stamp in XML files.